--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "sanic>=23.12.0",
     "python-dotenv>=1.0.0",
     "httpx>=0.25.0",
+    "aiosqlite>=0.19.0",
+    "bcrypt>=4.1.0",
 ]
 
 [project.optional-dependencies]
